# SPDX-License-Identifier: MIT-0

module(name = "drake_external_examples")

# Add the Bazel rulesets we need.
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_python", version = "1.6.3")

# Use the host system python.
register_toolchains("@rules_python//python/runtime_env_toolchains:all")

# Disable the exec tools toolchain.
register_toolchains("//:python_no_exec_tools_toolchain")

# Use the host system Eigen.
local_eigen_repository = use_repo_rule("//:eigen.bzl", "local_eigen_repository")
local_eigen_repository(name = "eigen")

# Use a downloaded, pre-compiled build of Drake.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "drake",
    urls = [
        # This URL refers to the most recent nightly build of Drake (which is
        # helpful for our CI test coverage). Users will probably want to pin
        # this to a specific release version, instead. To find those URLs,
        # refer to https://github.com/RobotLocomotion/drake/releases.
        "https://drake-packages.csail.mit.edu/drake/nightly/drake-latest-noble.tar.gz"
    ],
    build_file = "drake.BUILD.bazel",
    strip_prefix = "drake",
)
