# SPDX-License-Identifier: MIT-0

module(name = "drake_external_examples")

# Add the Bazel rules we need.
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_python", version = "0.40.0")

# Here we introduce Drake as a module dependency, but note that Drake is not
# published to any Bazel registry. Below, we'll override it with a github
# source archive.
bazel_dep(name = "drake")

# By default, this example always uses the latest Drake master branch.
DRAKE_COMMIT = "bzlmod-extension"
DRAKE_CHECKSUM = ""

# You can choose a specific revision of Drake to use, e.g.:
# DRAKE_COMMIT = "be4f658487f739ba04ec079de46f9459b719636d"
# DRAKE_CHECKSUM = "31ec8f87df3ceb6516de3c33a14c5d59ac5c003b4faf93ac526877d2e150b394"
#
# You can also use DRAKE_COMMIT to choose a Drake release; e.g.:
# DRAKE_COMMIT = "v0.15.0"
# DRAKE_CHECKSUM = "... TBD ..."
#
# Before changing the COMMIT, temporarily uncomment the next line so that Bazel
# displays the suggested new value for the CHECKSUM.
# DRAKE_CHECKSUM = "0" * 64

# This declares the `@drake` module as a source code archive from github.
# See README.md for instructions to use a local path, instead.
archive_override(
    module_name = "drake",
    urls = [x.format(DRAKE_COMMIT) for x in [
        "https://github.com/jwnimmer-tri/drake/archive/{}.tar.gz",
    ]],
    sha256 = DRAKE_CHECKSUM,
    strip_prefix = "drake-{}".format(DRAKE_COMMIT.lstrip("v")),
)

# Use the host system /usr/bin/python3.
python_repository = use_repo_rule(
    "@drake//tools/workspace/python:repository.bzl",
    "python_repository",
)

python_repository(
    name = "python",
    linux_interpreter_path = "/usr/bin/python3",
    requirements_flavor = "build",
)

register_toolchains("@python//:all")
