[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "drake-external-examples"
version = "0.1.0"
description = "External examples for Drake"
authors = [{ name = "RobotLocomotion <@>" }]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
drake = "~1.38.0"
